correct word wrapping for heroe b tag

--- a/css/style.css
+++ b/css/style.css
@@ -284,19 +284,18 @@ a:hover {
   z-index: 9;
 }
 #hero-area h1 {
-  font-size: 40px;
-  line-height: 50px;
+  font-size: 3.2rem;
   color: #333;
   font-weight: 700;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
   text-transform: uppercase;
 }
 #hero-area h2 {
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 1.7rem;
+  font-weight: 450;
   margin-bottom: 38px;
-  line-height: 27px;
-  text-transform: uppercase;
+  line-height: 2.6rem;
+  text-transform: none;
   color: #666;
   font-family: "Roboto", sans-serif;
   margin-top: 25px;
@@ -1163,5 +1162,9 @@ ul.social-icons li {
 
 .inner-collapse-content {
   margin: auto;
+}
+
+.cd-words-wrapper b {
+  font-size: 2.3rem;
 }
 /*# sourceMappingURL=style.css.map */
